// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.computed_entries 1`] = `
Array [
  Object {
    "name": "Name",
    "value": "M17_SWex.miriad",
  },
  Object {
    "name": "Shape",
    "value": "[640, 800, 25, 1]",
  },
  Object {
    "entryType": "INT",
    "name": "Number of channels",
    "numericValue": 25,
    "value": "25",
  },
  Object {
    "entryType": "INT",
    "name": "Number of polarizations",
    "numericValue": 1,
    "value": "1",
  },
  Object {
    "name": "Coordinate type",
    "value": "Right Ascension, Declination",
  },
  Object {
    "name": "Projection",
    "value": "SIN",
  },
  Object {
    "name": "Image reference pixels",
    "value": "[321, 401]",
  },
  Object {
    "name": "Image reference coords",
    "value": "[18:20:21.0000, -016.12.10.0000]",
  },
  Object {
    "name": "Image ref coords (deg)",
    "value": "[275.088 deg, -16.2028 deg]",
  },
  Object {
    "name": "Pixel increment",
    "value": "-0.4\\", 0.4\\"",
  },
  Object {
    "name": "Pixel unit",
    "value": "Jy/beam",
  },
  Object {
    "name": "Celestial frame",
    "value": "FK5, J2000",
  },
  Object {
    "name": "Spectral frame",
    "value": "BARY",
  },
  Object {
    "name": "Velocity definition",
    "value": "RADIO",
  },
  Object {
    "name": "Restoring beam",
    "value": "2.06105\\" X 1.49126\\", -74.6267 deg",
  },
]
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 1`] = `
Object {
  "comment": "IMAGE extension",
  "name": "XTENSION",
  "value": "IMAGE",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 2`] = `
Object {
  "comment": "Floating point (32 bit)",
  "entryType": 2,
  "name": "BITPIX",
  "numericValue": Any<Number>,
  "value": "-32",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 3`] = `"-3.2000e+1"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 4`] = `
Object {
  "entryType": 2,
  "name": "NAXIS",
  "numericValue": Any<Number>,
  "value": "4",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 5`] = `"4.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 6`] = `
Object {
  "entryType": 2,
  "name": "NAXIS1",
  "numericValue": Any<Number>,
  "value": "640",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 7`] = `"6.4000e+2"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 8`] = `
Object {
  "entryType": 2,
  "name": "NAXIS2",
  "numericValue": Any<Number>,
  "value": "800",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 9`] = `"8.0000e+2"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 10`] = `
Object {
  "entryType": 2,
  "name": "NAXIS3",
  "numericValue": Any<Number>,
  "value": "25",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 11`] = `"2.5000e+1"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 12`] = `
Object {
  "entryType": 2,
  "name": "NAXIS4",
  "numericValue": Any<Number>,
  "value": "1",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 13`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 14`] = `
Object {
  "entryType": "INT",
  "name": "PCOUNT",
  "value": "0",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 15`] = `
Object {
  "entryType": 2,
  "name": "GCOUNT",
  "numericValue": Any<Number>,
  "value": "1",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 16`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 17`] = `
Object {
  "comment": "PHYSICAL = PIXEL*BSCALE + BZERO",
  "entryType": 1,
  "name": "BSCALE",
  "numericValue": Any<Number>,
  "value": "1.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 18`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 19`] = `
Object {
  "entryType": "FLOAT",
  "name": "BZERO",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 20`] = `
Object {
  "entryType": 1,
  "name": "BMAJ",
  "numericValue": Any<Number>,
  "value": "5.725135932445E-04",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 21`] = `"5.7251e-4"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 22`] = `
Object {
  "entryType": 1,
  "name": "BMIN",
  "numericValue": Any<Number>,
  "value": "4.142385813538E-04",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 23`] = `"4.1424e-4"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 24`] = `
Object {
  "entryType": 1,
  "name": "BPA",
  "numericValue": Any<Number>,
  "value": "-7.462673187256E+01",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 25`] = `"-7.4627e+1"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 26`] = `
Object {
  "name": "BTYPE",
  "value": "Intensity",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 27`] = `
Object {
  "name": "OBJECT",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 28`] = `
Object {
  "comment": "Brightness (pixel) unit",
  "name": "BUNIT",
  "value": "Jy/beam",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 29`] = `
Object {
  "entryType": 1,
  "name": "EQUINOX",
  "numericValue": Any<Number>,
  "value": "2000",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 30`] = `"2.0000e+3"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 31`] = `
Object {
  "name": "RADESYS",
  "value": "FK5",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 32`] = `
Object {
  "entryType": 1,
  "name": "LONPOLE",
  "numericValue": Any<Number>,
  "value": "1.800000000000E+02",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 33`] = `"1.8000e+2"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 34`] = `
Object {
  "entryType": 1,
  "name": "LATPOLE",
  "numericValue": Any<Number>,
  "value": "-1.620277777779E+01",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 35`] = `"-1.6203e+1"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 36`] = `
Object {
  "entryType": 1,
  "name": "PC1_1",
  "numericValue": Any<Number>,
  "value": "1.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 37`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 38`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC2_1",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 39`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC3_1",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 40`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC4_1",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 41`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC1_2",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 42`] = `
Object {
  "entryType": 1,
  "name": "PC2_2",
  "numericValue": Any<Number>,
  "value": "1.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 43`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 44`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC3_2",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 45`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC4_2",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 46`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC1_3",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 47`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC2_3",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 48`] = `
Object {
  "entryType": 1,
  "name": "PC3_3",
  "numericValue": Any<Number>,
  "value": "1.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 49`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 50`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC4_3",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 51`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC1_4",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 52`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC2_4",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 53`] = `
Object {
  "entryType": "FLOAT",
  "name": "PC3_4",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 54`] = `
Object {
  "entryType": 1,
  "name": "PC4_4",
  "numericValue": Any<Number>,
  "value": "1.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 55`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 56`] = `
Object {
  "name": "CTYPE1",
  "value": "RA---SIN",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 57`] = `
Object {
  "entryType": 1,
  "name": "CRVAL1",
  "numericValue": Any<Number>,
  "value": "2.750875000001E+02",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 58`] = `"2.7509e+2"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 59`] = `
Object {
  "entryType": 1,
  "name": "CDELT1",
  "numericValue": Any<Number>,
  "value": "-1.111111111111E-04",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 60`] = `"-1.1111e-4"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 61`] = `
Object {
  "entryType": 1,
  "name": "CRPIX1",
  "numericValue": Any<Number>,
  "value": "321",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 62`] = `"3.2100e+2"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 63`] = `
Object {
  "name": "CUNIT1",
  "value": "deg",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 64`] = `
Object {
  "name": "CTYPE2",
  "value": "DEC--SIN",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 65`] = `
Object {
  "entryType": 1,
  "name": "CRVAL2",
  "numericValue": Any<Number>,
  "value": "-1.620277777779E+01",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 66`] = `"-1.6203e+1"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 67`] = `
Object {
  "entryType": 1,
  "name": "CDELT2",
  "numericValue": Any<Number>,
  "value": "1.111111111111E-04",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 68`] = `"1.1111e-4"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 69`] = `
Object {
  "entryType": 1,
  "name": "CRPIX2",
  "numericValue": Any<Number>,
  "value": "401",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 70`] = `"4.0100e+2"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 71`] = `
Object {
  "name": "CUNIT2",
  "value": "deg",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 72`] = `
Object {
  "name": "CTYPE3",
  "value": "FREQ",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 73`] = `
Object {
  "entryType": 1,
  "name": "CRVAL3",
  "numericValue": Any<Number>,
  "value": "8.675139618840E+10",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 74`] = `"8.6751e+10"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 75`] = `
Object {
  "entryType": 1,
  "name": "CDELT3",
  "numericValue": Any<Number>,
  "value": "-2.442377011414E+05",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 76`] = `"-2.4424e+5"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 77`] = `
Object {
  "entryType": 1,
  "name": "CRPIX3",
  "numericValue": Any<Number>,
  "value": "1",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 78`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 79`] = `
Object {
  "name": "CUNIT3",
  "value": "Hz",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 80`] = `
Object {
  "name": "CTYPE4",
  "value": "STOKES",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 81`] = `
Object {
  "entryType": 1,
  "name": "CRVAL4",
  "numericValue": Any<Number>,
  "value": "1.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 82`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 83`] = `
Object {
  "entryType": 1,
  "name": "CDELT4",
  "numericValue": Any<Number>,
  "value": "1.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 84`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 85`] = `
Object {
  "entryType": 1,
  "name": "CRPIX4",
  "numericValue": Any<Number>,
  "value": "1",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 86`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 87`] = `
Object {
  "name": "CUNIT4",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 88`] = `
Object {
  "entryType": "FLOAT",
  "name": "PV2_1",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 89`] = `
Object {
  "entryType": "FLOAT",
  "name": "PV2_2",
  "value": "0.000000000000E+00",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 90`] = `
Object {
  "comment": "Rest Frequency (Hz)",
  "entryType": 1,
  "name": "RESTFRQ",
  "numericValue": Any<Number>,
  "value": "8.675429000000E+10",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 91`] = `"8.6754e+10"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 92`] = `
Object {
  "comment": "Spectral reference frame",
  "name": "SPECSYS",
  "value": "BARYCENT",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 93`] = `
Object {
  "comment": "Alternate frequency reference value",
  "entryType": 1,
  "name": "ALTRVAL",
  "numericValue": Any<Number>,
  "value": "9.999999914138E+03",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 94`] = `"1.0000e+4"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 95`] = `
Object {
  "comment": "Alternate frequency reference pixel",
  "entryType": 1,
  "name": "ALTRPIX",
  "numericValue": Any<Number>,
  "value": "1",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 96`] = `"1.0000e+0"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 97`] = `
Object {
  "comment": "1 LSR, 2 HEL, 3 OBS, +256 Radio",
  "entryType": 2,
  "name": "VELREF",
  "numericValue": Any<Number>,
  "value": "258",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 98`] = `"2.5800e+2"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 99`] = `
Object {
  "name": "TELESCOP",
  "value": "ALMA",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 100`] = `
Object {
  "name": "DATE-OBS",
  "value": "2016-04-03T13:02:58.799982",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 101`] = `
Object {
  "name": "TIMESYS",
  "value": "UTC",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 102`] = `
Object {
  "entryType": 1,
  "name": "OBSGEO-X",
  "numericValue": Any<Number>,
  "value": "2.225142180269E+06",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 103`] = `"2.2251e+6"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 104`] = `
Object {
  "entryType": 1,
  "name": "OBSGEO-Y",
  "numericValue": Any<Number>,
  "value": "-5.440307370349E+06",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 105`] = `"-5.4403e+6"`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 106`] = `
Object {
  "entryType": 1,
  "name": "OBSGEO-Z",
  "numericValue": Any<Number>,
  "value": "-2.481029851874E+06",
}
`;

exports[`FILEINFO_MIRIAD: Testing if info of an MIRIAD image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : M17_SWex.miriad assert FILE_INFO_RESPONSE.file_info_extended.header_entries 107`] = `"-2.4810e+6"`;
